Time: 2 ms (99.72%), Space: 43.2 MB (37.75%) - LeetHub